@@ -149,7 +149,7 @@ sysvinit</a>.
 Stage 2 is packaging friendly:
 all a software package that provides a service needs to do is to include
 a <i>service directory</i> in the package, and to provide a symbolic link
-to this directory in <tt>/var/service/</tt>.
+to this directory in <tt>/service/</tt>.
 The service will be started within five seconds, and automatically at boot
 time.
 The package's install and update scripts can use the reliable control
