@@ -390,7 +390,7 @@ to be set up.
 <pre>
  #!/bin/sh
  exec 2&gt;&amp;1
- sv start /var/service/portmap || exit 1
+ sv start /service/portmap || exit 1
  exec famd -T 0 -f
 </pre>
 <hr>
