@@ -7,8 +7,8 @@ LAST=0
 test -x /etc/runit/reboot && LAST=6
 
 echo 'Waiting for services to stop...'
-sv -w196 force-stop /var/service/*
-sv exit /var/service/*
+sv -w196 force-stop /service/*
+sv exit /service/*
 
 echo 'Shutdown...'
 /etc/init.d/rc $LAST
