@@ -34,7 +34,7 @@ to the
 .I finish
 scripts, e.g.:
 .P
- $ cat /var/service/getty-5/finish
+ $ cat /service/getty-5/finish
  #!/bin/sh
  exec utmpset \-w tty5
  $
